General improvements to the alt client web UI - Fixed the screen width on mobile devices, preventing overflow - Refactored the add form to include a reusable function for the input rows

--- a/gpulist/alternative-client/src/styles/index.css
+++ b/gpulist/alternative-client/src/styles/index.css
@@ -23,3 +23,13 @@
 body {
   min-width: 500px;
 }
+
+@media only screen and (hover: none) and (pointer: coarse) {
+  :root {
+    font-size: 0.9rem;
+  }
+
+  body {
+    min-width: 320px;
+  }
+}
